added filter functionality

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
   </head>
   <body>
     <div class="app">
-      <input type="text" id="searchInput" placeholder="filter developer..." />
+      <input
+        type="text"
+        id="searchInput"
+        placeholder="filter developer by language..."
+      />
 
       <table>
         <thead>
